[package]
name = "luks-header-backup"
version = "0.1.2"
edition = "2024"
repository = "https://github.com/mason-larobina/luks-header-backup"
readme = "README.md"
authors = ["Mason Larobina <mason.larobina@pm.me>"]
description = "A luks header backup tool."
license = "MIT"

[dependencies]
anyhow = "1.0"
clap = { version = "4.5", features = ["derive"] }
sha2 = "0.10"
tempfile = "3.20"
env_logger = "0.11"
log = "0.4"
nix = { version = "0.30", features = ["user", "hostname"] }
